--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,9 +33,13 @@
       <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
       <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
     </svg></a>
+    <a href="#" onclick="$('#forward-button').click()"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="black" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+      <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+    </svg></a>
     <button id="prev-button" class="btn btn-primary" hidden>Prev</button>
     <button id="home-button" class="btn btn-primary" hidden>Home</button>
     <button id="refresh-button" class="btn btn-primary" hidden>Prev</button>
+    <button id="forward-button" class="btn btn-primary" hidden>Forward</button>
 
     <%- currentDirectory %>
     <ul class="file-container" id="count-li"><%- filelist %></ul>
@@ -103,6 +107,12 @@
 
       $("#home-button").click(function(){
         document.getElementById("requestDir").value = "home";
+        console.log(document.getElementById("requestDir").value);
+        $("#send-value").submit();
+      })
+
+      $("#forward-button").click(function(){
+        document.getElementById("requestDir").value = "forward";
         console.log(document.getElementById("requestDir").value);
         $("#send-value").submit();
       })
